# Crawler

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
Headers/: Clothe.h  Crawler.h  Item.h  Site.h
Sources/: Clothe.cpp  Crawler.cpp  Site.cpp
Tests/: Mocks.h  Test.cpp
